--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/costa/.local/share/virtualenvs/Honeysuckle-6FbUuCne/bin/python"
+    "python.pythonPath": "/Users/costa/Library/Caches/pypoetry/virtualenvs/padfoot-bot-EiPgAkl7-py3.9"
 }
