--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,49 @@
-aiohttp==3.7.4.post0
-anyio==3.6.1
-APScheduler==3.9.1
-asgiref==3.5.0
-async-timeout==3.0.1
-attrs==21.4.0
-beautifulsoup4==4.11.1
-certifi==2022.6.15
-chardet==4.0.0
-charset-normalizer==2.1.0
-click==8.1.3
+aiohttp==3.7.4.post0; python_version >= "3.6"
+anyio==3.6.1; python_full_version >= "3.6.2"
+apscheduler==3.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
+asgiref==3.5.0; python_version >= "3.7"
+async-timeout==3.0.1; python_full_version >= "3.5.3"
+attrs==21.4.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+beautifulsoup4==4.11.1; python_full_version >= "3.6.0"
+black==22.6.0; python_full_version >= "3.6.2"
+certifi==2022.6.15; python_version >= "3.6"
+chardet==4.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+charset-normalizer==2.1.0; python_full_version >= "3.6.0"
+click==8.1.3; python_version >= "3.7"
 cloudscraper==1.2.60
-discord.py==1.7.3
-fastapi==0.78.0
-h11==0.13.0
-httptools==0.4.0
-idna==3.3
-multidict==6.0.2
-pydantic==1.9.1
-pyparsing==3.0.9
-python-dateutil==2.8.2
-python-dotenv==0.20.0
+colorama==0.4.5; platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.6.2"
+discord.py==1.7.3; python_full_version >= "3.5.3"
+fastapi==0.78.0; python_full_version >= "3.6.1"
+h11==0.13.0; python_version >= "3.6"
+httptools==0.4.0; python_full_version >= "3.5.0"
+idna==3.3; python_version >= "3.5"
+isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
+multidict==6.0.2; python_version >= "3.7"
+mypy-extensions==0.4.3; python_full_version >= "3.6.2"
+pathspec==0.9.0; python_full_version >= "3.6.2"
+platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2"
+pydantic==1.9.1; python_full_version >= "3.6.1"
+pyparsing==3.0.9; python_full_version >= "3.6.8"
+python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+python-dotenv==0.20.0; python_version >= "3.5"
+pytz-deprecation-shim==0.1.0.post0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-requests==2.28.1
+pyyaml==6.0; python_version >= "3.6"
 requests-toolbelt==0.9.1
-six==1.16.0
-sniffio==1.2.0
-soupsieve==2.3.2.post1
-starlette==0.19.1
-typing-extensions==4.2.0
-tzdata==2022.1
-tzlocal==4.2
-urllib3==1.26.9
-uvicorn==0.18.2
-uvloop==0.16.0
-watchfiles==0.15.0
-watchgod==0.8.1
+requests==2.28.1; python_version >= "3.7" and python_version < "4"
+six==1.16.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+sniffio==1.2.0; python_version >= "3.5"
+soupsieve==2.3.2.post1; python_version >= "3.6"
+starlette==0.19.1; python_version >= "3.6"
+tomli==2.0.1; python_full_version < "3.11.0a7" and python_full_version >= "3.6.2" and python_version >= "3.7"
+typing-extensions==4.2.0; python_version >= "3.7"
+tzdata==2022.1; python_version >= "2"
+tzlocal==4.2; python_version >= "3.6"
+urllib3==1.26.9; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
+uvicorn==0.18.2; python_version >= "3.7"
+uvloop==0.16.0; python_version >= "3.7"
+watchfiles==0.15.0; python_version >= "3.7"
+watchgod==0.8.1; python_version >= "3.7"
 wcwidth==0.2.5
-websockets==10.3
-yarl==1.7.2
+websockets==10.3; python_version >= "3.7"
+yarl==1.7.2; python_version >= "3.6"
