--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Build the Docker image
       run: make build
 
-    - name: Push the Docker image
-      run: docker push $DOCKERHUB_USERNAME/$DOCKERHUB_REPO_NAME:${{ steps.date.outputs.date }}
+    - name: Push the Docker images
+      run: docker push ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:${{ steps.date.outputs.date }}
 
 
   deploy:
