--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   bot:
     build: .
+    image: padfoot_bot_latest
     network_mode: "host"
     volumes:
       - .:/padfoot_bot_src
