added new workflow + compose file with image tags.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   bot:
     build: .
-    image: ${DOCKERHUB_USERNAME}/${DOCKERHUB_REPO_NAME}:padfoot_bot_latest
+    image: "${DOCKERHUB_USERNAME}/${DOCKERHUB_REPO_NAME}:padfoot_bot_latest"
     network_mode: "host"
     volumes:
       - .:/padfoot_bot_src
