--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,8 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             echo "Pull new image"
-            docker pull ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:padfoot_bot_latest
-            docker run ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:padfoot_bot_latest
+            docker-compose -f /home/${{ secrets.VPS_SSH_USERNAME }}/serial_bookworm_project/padfoot_bot/Padfoot_bot/docker-compose.yml pull
+            echo "Restarting the container"
+            docker-compose -f /home/${{ secrets.VPS_SSH_USERNAME }}/serial_bookworm_project/padfoot_bot/Padfoot_bot/docker-compose.yml up --force-recreate --build --no-deps -d
             echo "Deleting old image..."
             docker image prune -f
