--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest   
-    needs: [build_and_push_to_hub]
+    # needs: [build_and_push_to_hub]
     steps:
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
