--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,17 @@ jobs:
           # passphrase
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
+            echo "Removing existing container..."
+            docker rm --force padfoot_bot-bot-1 
+            
+            echo "Removing existing image..."
+            docker image rm ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:padfoot_bot_latest
+            
             echo "Pull new image"
             docker compose -f /home/${{ secrets.VPS_SSH_USERNAME }}/serial_bookworm_project/padfoot_bot/Padfoot_bot/docker-compose.yml pull
-            echo "Restarting the container"
+            
+            echo "Restarting the container..."
             docker compose -f /home/${{ secrets.VPS_SSH_USERNAME }}/serial_bookworm_project/padfoot_bot/Padfoot_bot/docker-compose.yml up --force-recreate --build --no-deps -d
-            echo "Deleting old image..."
+            
+            echo "Deleting old image(s)..."
             docker image prune -f
