--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   bot:
-    build: .
+    # build: .
     image: "${DOCKERHUB_USERNAME}/${DOCKERHUB_REPO_NAME}:padfoot_bot_latest"
     network_mode: "host"
     volumes:
