test commit for admin cog.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,7 @@ jobs:
             
             echo "Removing existing image..."
             docker image rm ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:padfoot_bot_latest
+            docker image prune -a
             
             echo "Pull new image"
             docker compose -f /home/${{ secrets.VPS_SSH_USERNAME }}/serial_bookworm_project/padfoot_bot/Padfoot_bot/docker-compose.yml pull
