--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,40 +13,40 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains multiple jobs
-  build_and_push_to_hub:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+  # build_and_push_to_hub:
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v3
     
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+  #   - name: Set up QEMU
+  #     uses: docker/setup-qemu-action@v1
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v1
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #   - name: Login to DockerHub
+  #     uses: docker/login-action@v1
+  #     with:
+  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #       password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Create a temporary .env file for storing docker compose variables 
-      run: |
-        touch .env
-        echo DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} >> .env
-        echo DOCKERHUB_REPO_NAME=${{ secrets.DOCKERHUB_REPO_NAME }} >> .env
+  #   - name: Create a temporary .env file for storing docker compose variables 
+  #     run: |
+  #       touch .env
+  #       echo DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} >> .env
+  #       echo DOCKERHUB_REPO_NAME=${{ secrets.DOCKERHUB_REPO_NAME }} >> .env
     
-    - name: Build the Docker image
-      run: make build
+  #   - name: Build the Docker image
+  #     run: make build
 
-    - name: Push the Docker images
-      run: docker push ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:padfoot_bot_latest
+  #   - name: Push the Docker images
+  #     run: docker push ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:padfoot_bot_latest
 
 
   deploy:
     runs-on: ubuntu-latest   
-    needs: [build_and_push_to_hub]
+    # needs: [build_and_push_to_hub]
     steps:
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
@@ -62,19 +62,9 @@ jobs:
           port: ${{ secrets.VPS_SSH_PORT }}
           # passphrase
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: |
-            echo "Removing existing container..."
-            docker rm --force padfoot_bot-bot-1 
-            
-            echo "Removing existing image..."
-            docker image rm ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:padfoot_bot_latest
-            docker image prune -a -f
-            
-            echo "Pull new image"
-            docker compose -f /home/${{ secrets.VPS_SSH_USERNAME }}/serial_bookworm_project/padfoot_bot/Padfoot_bot/docker-compose.yml pull
-            
-            echo "Restarting the container..."
-            docker compose -f /home/${{ secrets.VPS_SSH_USERNAME }}/serial_bookworm_project/padfoot_bot/Padfoot_bot/docker-compose.yml up --force-recreate --build --no-deps -d
-            
+          script: |  
+            cd ${{ secrets.PROJECT_PATH }} | git pull https://${{ secrets.TOKEN }}@github.com/Serial-Bookworm/Padfoot_bot.git 
+            make down-v
+            make build
             echo "Deleting old image(s)..."
-            docker image prune -f
+            docker image prune -a -f
